fixed accent contrast

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,7 +70,7 @@
   --muted: oklch(0.2686 0 0);
   --muted-foreground: oklch(0.7155 0 0);
   --accent: oklch(0.4232 0.143 11.1172);
-  --accent-foreground: oklch(0.8696 0.0802 350.5138);
+  --accent-foreground: oklch(97.52% 0.01507 345.136);
   --destructive: oklch(0.8348 0.2502 142.9227);
   --destructive-foreground: oklch(1 0 0);
   --border: oklch(0.3715 0 0);
